<resources>
    <string name="app_name">MeetPlan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="new_user">New to MeetPlan?</string>
    <string name="search_prompt">Search City</string>
    <string name="restaurants">Restaurants</string>
    <string name="time">Time</string>
    <string name="invite">Invite</string>
    <string name="browse">Browse</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="expenses">Expenses</string>
    <string name="create">Create</string>
    <string name="calculate">Calculate</string>
    <string name="name">Name</string>
    <string name="success">Success</string>
    <string name="done">Done</string>

    <string name="meetup_details">Meetup Details</string>
    <string name="choose">Choose</string>
    <string name="invited_meetups">Invited Meetups</string>
    <string name="account_info">Account Information</string>
    <string name="all_members">All Members</string>
    <string name="add_members">Add Members</string>
    <string name="new_expense">Create New Expense</string>

    <string name="time_label">Time:</string>
    <string name="invited_label">Invited:</string>
    <string name="members_label">Members:</string>
    <string name="title_label">Title:</string>
    <string name="description_label">Description:</string>
    <string name="date_label">Date:</string>
    <string name="location_label">Location:</string>
    <string name="type_label">Activity:</string>
    <string name="username_label">Username:</string>
    <string name="email_label">Email:</string>
    <string name="profile_pic_label">Profile Picture:</string>
    <string name="amount_label">Amount:</string>
    <string name="name_label">Name:</string>
    <string name="paid_label">Paid by:</string>
    <string name="num_label">Number of People:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="see_website">See website</string>
    <string name="add_question">Add this activity to </string>
    <string name="info_saved">Account information updated!</string>
    <string name="add_restaurant">Double click to add a restaurant!</string>
    <string name="image_load">New photo loading</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="event_error">Could not retrieve event data</string>
    <string name="restaurant_error">Could not retrieve restaurant data</string>
    <string name="expense_error">Could not retrieve expenses</string>
    <string name="profile_pic_error">Could not load profile picture</string>
    <string name="meetups_error">Could not retrieve meetups</string>
    <string name="take_pic_error">Picture was not taken</string>
    <string name="integer_error">Please enter a valid integer</string>

    <string name="invite_title">Choose user to invite</string>
    <string name="add_title">Choose user to add</string>
</resources>