<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCFC"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_med"
            android:text="@string/signup" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/newLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_alignParentRight="false"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_toStartOf="@+id/signupButton"
            android:text="@string/new_user"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_med"
            android:layout_marginEnd="@dimen/margin_med"
            android:layout_marginBottom="@dimen/margin_med"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_margin="@dimen/margin_med"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_med"
            android:layout_marginRight="@dimen/margin_med"
            android:layout_marginBottom="@dimen/margin_med"
            android:layout_weight="1"
            android:text="@string/login"/>

    </RelativeLayout>

</RelativeLayout>