<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/margin_med"
    card_view:cardCornerRadius="@dimen/padding"
    card_view:cardElevation="@dimen/margin_small"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_med"
        android:layout_marginBottom="@dimen/margin_details"
        android:padding="@dimen/padding"
        tools:context=".ComposeActivity">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/respond_image"
            android:text="@string/add"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_close" />

        <TextView
            android:id="@+id/activityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_details"
            android:fontFamily="@font/catamaran"
            android:text="@string/type_label"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activityLabel"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_med"
            android:textColor="@android:color/black"
            android:fontFamily="@font/catamaran"

            android:textStyle="bold"
            android:text="@string/location_label" />

        <TextView
            android:id="@+id/activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_details"
            android:layout_toRightOf="@id/activityLabel"
            android:fontFamily="@font/catamaran"
            android:textColor="@android:color/black"
            tools:text="Event" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_med"
            android:layout_toRightOf="@id/locationLabel"
            android:fontFamily="@font/catamaran"
            android:textColor="@android:color/black"
            tools:text="Location" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:layout_marginLeft="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_toRightOf="@id/locationLabel"
            android:fontFamily="@font/catamaran"
            android:textColor="@android:color/black"
            tools:text="Location" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:layout_marginTop="40dp"
            android:layout_marginRight="@dimen/margin_small"
            android:fontFamily="@font/catamaran"
            android:textColor="@android:color/black"
            android:layout_toLeftOf="@id/addButton" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>